<resources>
    <string name="app_name">Shopping Cart</string>
    <string name="beds_available">%d beds available</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="price_format_bed">%s /bed</string>
    <string name="sale_summary">Sale summary</string>
    <string name="items">Items</string>
    <string name="to_pay">To pay</string>
    <string name="item_number_format">%dx</string>
    <string name="pay">Pay</string>
    <string name="total_beds_format">(%s)</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="currency">Currency</string>
</resources>